# mythme

./: .flake8  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  mypy.ini  plyconfig.yaml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
docs/img/: myth-me.xcf
src/mythme/: dailyvid.py
src/mythme/api/: configs.py  content.py  main.py  queries.py  recordings.py  subscriptions.py  videos.py
src/mythme/data/: programs.py  recordings.py  subscriptions.py  videos.py
src/mythme/model/: config.py  credit.py  program.py  recording.py  scheduled.py  subscription.py  video.py
src/mythme/query/: queries.py
src/mythme/utils/: config.py  dailyvids.py  lirc.py  log.py  media.py  mythtv.py  push.py  text.py
tests/: test_dailyvid.py  test_lirc.py
tests/ply/: delete-video-metadata.ply  get-channels.ply  get-credits.ply  get-dailyvid.ply  get-dailyvids-psv.ply  get-file.ply  get-genres.ply  get-movies.ply  get-mythtv-config.ply  get-programs.ply  get-queries.ply  get-query.ply  get-recording-by-chanid-starttime.ply  get-recording.ply  get-recordings.ply  get-subs-public-key.ply  get-video-by-id.ply  get-video-file.ply  get-video.ply  get-videos.ply  patch-dailyvid.ply  patch-video-sync.ply  post-video-file.ply  post-video-playback.ply  post-video-scan.ply  post-video.ply  schedule-recording.ply  sync-videos.ply  update-video.ply
tests/ply/mythtv/: add-record-schedule.ply  (+16 more)
tests/sql/: channels.sql  credits.sql  movies.sql  programs.sql  settings.sql  videos.sql
tests/values/: localhost.json  mythbe.json  mythbe2.json  mythtv.json
(+18 files in other folders)
